4.39: 3/XX/2012 (svn rYYYY)
	* ANDROID: Added SQLite calls to determine how many rows have changed for delete and updates.

4.38: 3/23/2012 (svn r2426)
	* ANDROID: Fixed bad ObjectCache bug deep in Android shutdown/startup logic. Thanks to Filipe Leandro. Bug #3510266.

4.37: 3/21/2012 (svn r2406)
	* CORE: Fixed blocking bug where object cache exceptions would be thrown.  Thanks to Filipe Leandro.  Bug #3509853.
	* CORE: Fixed bug where LocalLog was overwriting log data written to local file.  Thanks to mjomble.  Bug #3437823.
	* ANDROID: Fixed a bug with Android API lookup of column names with periods. Thanks to Sebastian Roth. Bug #3509386.

4.36: 3/19/2012 (svn r2389)
	* CORE: Added support for @DatabaseField(foreignColumnName="name") to map foreign to non-ID.  Thanks to Mathias Lin.
	* CORE: Added update() and refresh() to ForeignCollection which call through to the inner Dao.
	* CORE: Improved the custom data persister code so it can extend one of the types.  Added docs and example.
	* CORE: Added a Joda DateTime persister which uses reflection.
	* CORE: Increased synchronization around some code to be proactive about constructor reordering race-conditions.
	* CORE: Added updateAll(), refreshAll(), refreshCollection() for eager foreign collections.  Thanks to Chris Nevill.
	* CORE: Added logging of exceptions to the RuntimeExceptionDao.  Thanks to Kaan.
	* CORE: Revamped the Logger stuff to remove new Object[] that was happening on each Logger call. Bug #3509015.
	* JDBC: Fixed a bug in where transactions aren't commited with auto-commit off.  Thanks to Tony. Bug #3508746. 

4.35: 2/22/2012 (svn r2337)
	* CORE: Bug where not all queried objects were added to cache. Thanks to Filipe Leandro. Bug #3491418.

4.34: 2/22/2012 (svn r2318)
	* CORE: Fixed restriction on Long auto-incremented SQLite ids. Thanks to John Kristian. Bug #3474479.
	* CORE: Added support for sql NOT IN clause to where().  Thanks to Marvin Jomble.  Feature #3474550.