@@ -1,5 +1,6 @@
 4.39: 3/XX/2012 (svn rYYYY)
-	* ANDROID: Added SQLite calls to determine how many rows have changed for delete and updates.
+	* JDBC: Added support for preparedStatement.setQueryTimeout(millis).  Thanks to mjomble. Feature #3502803. 
+	* ANDROID: Finally fixed the number of rows changed for insert/delete/update calls using SQLite CHANGES() pragma.
 
 4.38: 3/23/2012 (svn r2426)
 	* ANDROID: Fixed bad ObjectCache bug deep in Android shutdown/startup logic. Thanks to Filipe Leandro. Bug #3510266.
